# gas

./: Cargo.toml  README.md  README.txt  TODO.txt  bench.sh  crates.js  results.1.csv  results.csv  search-index.js  settings.html  source-files.js
.github/workflows/: ci.yaml  rustdoc.yaml
examples/schedule/: Cargo.toml
gas/: all.html  index.html  sidebar-items.js
gas/candidate/: index.html  sidebar-items.js  struct.Candidate.html
gas/chromosone/: index.html  sidebar-items.js  type.Gene.html
gas/constraints/: index.html  sidebar-items.js  struct.ConstraintConfig.html  trait.Constraint.html
gas/crossover/: index.html  sidebar-items.js  struct.CrossoverConfig.html  struct.CrossoverIter.html  trait.Crossover.html
gas/fitness/: index.html  sidebar-items.js  struct.FitnessConfig.html  struct.FitnessName.html  trait.FitnessFunction.html
gas/game/: enum.LeftRight.html  index.html  sidebar-items.js  trait.Game.html
gas/gas/: index.html  sidebar-items.js  struct.Gas.html
gas/helpers/: fn.multidimensional_bresenhams.html  index.html  sidebar-items.js
gas/mutation/: index.html  sidebar-items.js  struct.MutationConfig.html  struct.MutationIter.html  trait.Mutation.html
gas/pool/: index.html  sidebar-items.js  struct.Pool.html
gas/rando/: index.html  sidebar-items.js  (+1 more)
src/: candidate.rs  chromosone.rs  config.rs  constraints.rs  crossover.rs  cycle.rs  data.rs  fitness.rs  game.rs  gas.rs  generation.rs  helpers.rs  lib.rs  main.rs  mutation.rs  pool.rs  rando.rs  repopulate.rs  reproduction.rs  schedule_data.rs  test_data.rs  tournaments.rs  winners.rs
(+129 files in other folders)
