[package]
name = "gas"
version = "0.1.0"
edition = "2021"

[lib]
name = "gas"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array-init = "2.0.1"
mockall_double = "0.3.0"
rand = "0.8.5"
serde = {version = "1.0.144", optional = true}

[dev-dependencies]
mockall = "0.11.1"
