[package]
name = "ga-scheduler"
version = "0.1.0"
edition = "2021"
description = "A Genetic Algorithm optimizer designed for scheduling and similar tasks"
license = "Apache2"
repository = "https://github.com/bryanlarsen/gas"
homepage = "https://github.com/bryanlarsen/gas"

[lib]
name = "gas"

[dependencies]
array-init = "2.0.1"
mockall_double = "0.3.0"
rand = "0.8.5"
serde = {version = "1.0.144", features=["derive"], optional = true}

[dev-dependencies]
mockall = "0.11.1"
